--- a/hNext/hNext.ResourceLibrary/Resources/Resources.resx
+++ b/hNext/hNext.ResourceLibrary/Resources/Resources.resx
@@ -246,8 +246,14 @@
   <data name="SelectDistrict" xml:space="preserve">
     <value>Оберіть район</value>
   </data>
+  <data name="SelectGender" xml:space="preserve">
+    <value>Оберіть стать</value>
+  </data>
   <data name="SelectRegion" xml:space="preserve">
     <value>Оберіть область</value>
+  </data>
+  <data name="SelectStreet" xml:space="preserve">
+    <value>Оберіть вулицю</value>
   </data>
   <data name="SelectStreetType" xml:space="preserve">
     <value>Оберіть тип вулиці</value>
