--- a/hNext/hNext.ResourceLibrary/Resources/Resources.resx
+++ b/hNext/hNext.ResourceLibrary/Resources/Resources.resx
@@ -120,6 +120,9 @@
   <data name="Address" xml:space="preserve">
     <value>Адреса</value>
   </data>
+  <data name="AlreadyExists" xml:space="preserve">
+    <value>вже існує</value>
+  </data>
   <data name="Apartment" xml:space="preserve">
     <value>Квартира</value>
   </data>
@@ -269,6 +272,9 @@
   </data>
   <data name="SelectType" xml:space="preserve">
     <value>Оберіть тип</value>
+  </data>
+  <data name="SetExistingAddress" xml:space="preserve">
+    <value>Присвоїти цю адресу новій особі</value>
   </data>
   <data name="Street" xml:space="preserve">
     <value>Вулиця</value>
