--- a/hNext/hNext.ResourceLibrary/Resources/Resources.resx
+++ b/hNext/hNext.ResourceLibrary/Resources/Resources.resx
@@ -249,6 +249,9 @@
   <data name="Relation" xml:space="preserve">
     <value>Ким приходиться</value>
   </data>
+  <data name="ResetSearch" xml:space="preserve">
+    <value>Скинути пошук</value>
+  </data>
   <data name="Save" xml:space="preserve">
     <value>Зберегти</value>
   </data>
