--- a/hNext/hNext.ResourceLibrary/Resources/Resources.resx
+++ b/hNext/hNext.ResourceLibrary/Resources/Resources.resx
@@ -231,6 +231,9 @@
   <data name="Patient" xml:space="preserve">
     <value>Пацієнт</value>
   </data>
+  <data name="PatientAdditionalData" xml:space="preserve">
+    <value>Додаткові дані пацієнта</value>
+  </data>
   <data name="Patients" xml:space="preserve">
     <value>Пацієнти</value>
   </data>
@@ -239,6 +242,9 @@
   </data>
   <data name="Phones" xml:space="preserve">
     <value>Телефони</value>
+  </data>
+  <data name="PhoneType" xml:space="preserve">
+    <value>Тип телефону</value>
   </data>
   <data name="PlaceOfBirth" xml:space="preserve">
     <value>Місце народження</value>
@@ -276,6 +282,9 @@
   <data name="SelectGender" xml:space="preserve">
     <value>Оберіть стать</value>
   </data>
+  <data name="SelectPhoneType" xml:space="preserve">
+    <value>Оберіть тип телефону</value>
+  </data>
   <data name="SelectRegion" xml:space="preserve">
     <value>Оберіть область</value>
   </data>
@@ -311,5 +320,23 @@
   </data>
   <data name="Zip" xml:space="preserve">
     <value>Індекс</value>
+  </data>
+  <data name="Delete" xml:space="preserve">
+    <value>Видалити</value>
+  </data>
+  <data name="Phone" xml:space="preserve">
+    <value>Телефон</value>
+  </data>
+  <data name="PhoneExistsAdd" xml:space="preserve">
+    <value>Такий номер телефону вже існує. Додати існуючий номер обраному пацієнту?</value>
+  </data>
+  <data name="CreateNewPhone" xml:space="preserve">
+    <value>Створити новий телефон</value>
+  </data>
+  <data name="CanNotChangePhone" xml:space="preserve">
+    <value>Не можна змінити телефон</value>
+  </data>
+  <data name="RecordBelongsToOthers" xml:space="preserve">
+    <value>Запис належит іншим користувачам</value>
   </data>
 </root>
