--- a/hNext/hNext.ResourceLibrary/Resources/Resources.resx
+++ b/hNext/hNext.ResourceLibrary/Resources/Resources.resx
@@ -525,4 +525,7 @@
   <data name="DeletePosition" xml:space="preserve">
     <value>Видалити посаду</value>
   </data>
+  <data name="EnterDate" xml:space="preserve">
+    <value>Введіть дату</value>
+  </data>
 </root>
