case history model and db

--- a/hNext/hNext.ResourceLibrary/Resources/Resources.resx
+++ b/hNext/hNext.ResourceLibrary/Resources/Resources.resx
@@ -528,4 +528,34 @@
   <data name="EnterDate" xml:space="preserve">
     <value>Введіть дату</value>
   </data>
+  <data name="Admitted" xml:space="preserve">
+    <value>Поступив</value>
+  </data>
+  <data name="Author" xml:space="preserve">
+    <value>Автор</value>
+  </data>
+  <data name="Date" xml:space="preserve">
+    <value>Дата</value>
+  </data>
+  <data name="Discharged" xml:space="preserve">
+    <value>Виписаний</value>
+  </data>
+  <data name="Hospitalization" xml:space="preserve">
+    <value>Госпіталізація</value>
+  </data>
+  <data name="Insured" xml:space="preserve">
+    <value>Застрахований</value>
+  </data>
+  <data name="ReferredBy" xml:space="preserve">
+    <value>Направлений</value>
+  </data>
+  <data name="Result" xml:space="preserve">
+    <value>Результат</value>
+  </data>
+  <data name="SelectPatient" xml:space="preserve">
+    <value>Оберіть пацієнта</value>
+  </data>
+  <data name="Severity" xml:space="preserve">
+    <value>Тяжкість</value>
+  </data>
 </root>
