--- a/hNext/hNext.ResourceLibrary/Resources/Resources.resx
+++ b/hNext/hNext.ResourceLibrary/Resources/Resources.resx
@@ -567,4 +567,7 @@
   <data name="Add" xml:space="preserve">
     <value>Додати</value>
   </data>
+  <data name="GeneralInfo" xml:space="preserve">
+    <value>Загальна інформація</value>
+  </data>
 </root>
