case history records backend

--- a/hNext/hNext.ResourceLibrary/Resources/Resources.resx
+++ b/hNext/hNext.ResourceLibrary/Resources/Resources.resx
@@ -726,4 +726,7 @@
   <data name="NoFieldsError" xml:space="preserve">
     <value>Додайте поля</value>
   </data>
+  <data name="Records" xml:space="preserve">
+    <value>Записи</value>
+  </data>
 </root>
