case history record showing template

--- a/hNext/hNext.ResourceLibrary/Resources/Resources.resx
+++ b/hNext/hNext.ResourceLibrary/Resources/Resources.resx
@@ -729,4 +729,10 @@
   <data name="Records" xml:space="preserve">
     <value>Записи</value>
   </data>
+  <data name="SelectTemplate" xml:space="preserve">
+    <value>Оберіть шаблон</value>
+  </data>
+  <data name="NoTemplateRecord" xml:space="preserve">
+    <value>Запис без шаблону</value>
+  </data>
 </root>
